Psando el primer escenario de aceptacion, de movimiento al norte

--- a/views/defaultMap.erb
+++ b/views/defaultMap.erb
@@ -6,7 +6,7 @@
     <br>
     <br>
     <br>
-    <form method="get" action="/">
+    <form method="get" action="/play">
     	<button type="submit" name="INICIO">INICIO</button>
 	</form>
 <center>
