--- a/views/console.erb
+++ b/views/console.erb
@@ -20,17 +20,34 @@
   			<tr>
     			<td>
     				<div>
-						<form method="get" action="/">
-        					<button type="submit" name="Norte">Norte</button>
-						</form>
+    					<% if @north %>
+ 							<form method="post" action="/toNorth">
+        						<button type="submit" name="Norte">Norte</button>
+							</form>
+						<% end %>
+						<% if @south %>
+ 							<form method="post" action="/toSouth">
+        						<button type="submit" name="Sur">Sur</button>
+							</form>
+						<% end %>
+						<% if @east %>
+ 							<form method="post" action="/toEast">
+        						<button type="submit" name="Este">Este</button>
+							</form>
+						<% end %>
+						<% if @west %>
+ 							<form method="post" action="/toWest">
+        						<button type="submit" name="Oeste">Oeste</button>
+							</form>
+						<% end %>
 					</div>
     			</td>
     			<td>
     				<div id="console">
-    				
+    					<label>Entraste a la cueva <%= @mensaje %></label>
     				</div>
     			</td>
-    			<td>OBJECT</td>
+    			<td>OBJECTS</td>
   			</tr>
 		</table>
 	</body>
