pruebas de ATTD comentadas por errores con webrat, app funcional, se recibe la pista sobre la posicion del wumpus

--- a/views/console.erb
+++ b/views/console.erb
@@ -45,6 +45,10 @@
     			<td>
     				<div id="console">
     					<label>Entraste a la cueva <%= @mensaje %></label>
+    					<br>
+    					<% if @smell %>
+ 							<label>Se siente un olor fetido en este cuarto</label>
+						<% end %>
     				</div>
     			</td>
     			<td>OBJECTS</td>
