Jugador ya tiene flechas
     por ahora solo tiene flechas como atributo
     falta recojer
     ATTD rspec Verdes

--- a/views/console.erb
+++ b/views/console.erb
@@ -51,7 +51,9 @@
 						<% end %>
     				</div>
     			</td>
-    			<td>OBJECTS</td>
+    			<td>
+    				<label>Flechas: <%= @numberOfArrows %></label>
+    			</td>
   			</tr>
 		</table>
 	</body>
