--- a/views/console.erb
+++ b/views/console.erb
@@ -22,7 +22,8 @@
     				<div>
     					<% if @north %>
  							<form method="post" action="/toNorth">
-        						<button type="submit" name="Norte">Norte</button>
+								<button type="submit" name="Norte">Norte</button>
+								
 							</form>
 						<% end %>
 						<% if @south %>
@@ -40,11 +41,15 @@
         						<button type="submit" name="Oeste">Oeste</button>
 							</form>
 						<% end %>
+						
 					</div>
     			</td>
     			<td>
     				<div id="console">
-    					<label>Entraste a la cueva <%= @mensaje %></label>
+						<label>Entraste a la cueva <%= @mensaje %></label>
+						<br></br>
+						<label> <%= $m %></label>
+						
     					<br>
     					<% if @smell %>
  							<label>Se siente un olor fetido en este cuarto</label>
