--- a/views/start.erb
+++ b/views/start.erb
@@ -1,7 +1,26 @@
-<center>
-	<h1>MUNDO WUMPUS</h1>
-	<br>
-	<form method="post" action="/start">
-    	<button type="submit" name="JUGAR MAPA POR DEFECTO">JUGAR MAPA POR DEFECTO</button>
-	</form>
-</center>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="shortcut icon" href="/favicon.ico" />
+<header>
+	<nav class="navbar navbar-inverse">
+	    <div class="container-fluid">
+	        <div class="navbar-header">
+	            <a class="navbar-brand" href="/"><mark>MUNDO WUMPUS</mark></a>
+	        </div>
+	        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+	            <ul class="nav navbar-nav navbar-right">
+	                <li>
+	                    <h1>MULTIVERSE</h1>
+	                </li>
+	            </ul>
+	        </div>
+	    </div>
+	</nav>
+</header>
+<body>
+	<center>
+		<form method="post" action="/start">
+	    	<button type="submit" class="btn btn-success" name="JUGAR MAPA POR DEFECTO">JUGAR MAPA POR DEFECTO</button>
+		</form>
+	</center>
+</body>
