--- a/views/console.erb
+++ b/views/console.erb
@@ -1,90 +1,101 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link rel="shortcut icon" href="/favicon.ico" />
 <html>
-	<head>
 		<style type="text/css">
 			#console 
 			{
     			background-color: lightblue;
 			}
 		</style>
-	</head>
-	<body>
-		<div>
-			<h2>MUNDO WUMPUS</h2>
-		</div>
-		<table style="width:100%">
-  			<tr>
-    			<th></th>
-    			<th></th> 
-    			<th></th>
-			  </tr>
-			<% if @wumpusvivo %> 
-  			<tr>
-    			<td>
-    				<div>
-    					<% if @north %>
- 							<form method="post" action="/toNorth">
-								<button type="submit" name="Norte">Norte</button>
-								
-							</form>
-							<% if @numberOfArrows>=1 %>
-								<form method="post" action="/shootToTop">
-								<button type="submit" name="shootTop">disparar al norte</button>
+	<header>
+		<nav class="navbar navbar-inverse">
+		    <div class="container-fluid">
+		        <div class="navbar-header">
+		            <a class="navbar-brand" href="/"><mark>MUNDO WUMPUS</mark></a>
+		        </div>
+		        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
+		            <ul class="nav navbar-nav navbar-right">
+		                <li>
+		                    <h1>MULTIVERSE</h1>
+		                </li>
+		            </ul>
+		        </div>
+		    </div>
+		</nav>
+	</header>
+    <div class="container">
+	      <div class="row">
+	      	<% if @wumpusvivo %> 
+	        <div class="col-md-4">
+	        	<center><h2>DIRECCION-DISPARAR</h2></center>
+		          <div>
+	    					<% if @north %>
+	 							<form method="post" action="/toNorth">
+									<button type="submit" name="Norte">Norte</button>
+									
 								</form>
-							<%end%>
-						<% end %>
-						<% if @south %>
- 							<form method="post" action="/toSouth">
-        						<button type="submit" name="Sur">Sur</button>
-							</form>
-							<% if @numberOfArrows>=1 %>
-								<form method="post" action="/shootToBottom">
-								<button type="submit" name="shootBot">disparar al sur</button>
-								
-								</form>
+								<% if @numberOfArrows>=1 %>
+									<form method="post" action="/shootToTop">
+									<button type="submit" name="shootTop">disparar al norte</button>
+									</form>
+								<%end%>
 							<% end %>
-						<% end %>
-						<% if @east %>
- 							<form method="post" action="/toEast">
-        						<button type="submit" name="Este">Este</button>
-							</form>
-							<% if @numberOfArrows>=1 %>
-								<form method="post" action="/shootToRight">
-								<button type="submit" name="shootRight">disparar al este</button>
+							<% if @south %>
+	 							<form method="post" action="/toSouth">
+	        						<button type="submit" name="Sur">Sur</button>
 								</form>
+								<% if @numberOfArrows>=1 %>
+									<form method="post" action="/shootToBottom">
+									<button type="submit" name="shootBot">disparar al sur</button>
+									
+									</form>
+								<% end %>
 							<% end %>
-						<% end %>
-						<% if @west %>
- 							<form method="post" action="/toWest">
-        						<button type="submit" name="Oeste">Oeste</button>
-							</form>
-							<% if @numberOfArrows>=1 %>
-								<form method="post" action="/shootToLeft">
-								<button type="submit" name="shootLeft">disparar al oeste</button>
+							<% if @east %>
+	 							<form method="post" action="/toEast">
+	        						<button type="submit" name="Este">Este</button>
 								</form>
+								<% if @numberOfArrows>=1 %>
+									<form method="post" action="/shootToRight">
+									<button type="submit" name="shootRight">disparar al este</button>
+									</form>
+								<% end %>
 							<% end %>
-						<% end %>
-						
+							<% if @west %>
+	 							<form method="post" action="/toWest">
+	        						<button type="submit" name="Oeste">Oeste</button>
+								</form>
+								<% if @numberOfArrows>=1 %>
+									<form method="post" action="/shootToLeft">
+									<button type="submit" name="shootLeft">disparar al oeste</button>
+									</form>
+								<% end %>
+							<% end %>						
 					</div>
-    			</td>
-    			<td>
-    				<div id="console">
-						<label>Entraste a la cueva <%= @mensaje %></label>
-						<br></br>
-						<label> <%= $m %></label>
-						
-    					<br>
-    					<% if @smell %>
- 							<label>Se siente un olor fetido en este cuarto</label>
-						<% end %>
-    				</div>
-    			</td>
-    			<td>
-    				<label>Flechas: <%= @numberOfArrows %></label>
-    			</td>
-			  </tr>
-			<% else %>
+	        </div>
+	        <div class="col-md-4">
+	          <center><h2>SUCESOS</h2></center>
+		          <div id="console">
+							<label>Entraste a la cueva <%= @mensaje %></label>
+							<br></br>
+							<label> <%= $m %></label>	
+	    					<br>
+	    					<% if @smell %>
+	 							<label>Se siente un olor fetido en este cuarto</label>
+							<% end %>
+	    		  </div>
+
+		    </div>
+	        <div class="col-md-4">
+	            <center><h2>ITEMS</h2></center>
+	         		 <label>Flechas: <%= @numberOfArrows %></label>
+	        </div>
+	        <% else %>
 				<h2>Gano!!!!</h2>
 			<% end %>
-		</table>
+     </div>
+	<body>
+	
 	</body>
 </html>
