Agregado recoger spray
	Conjuntamente con pruebas

--- a/views/console.erb
+++ b/views/console.erb
@@ -69,6 +69,7 @@
 	        <div class="col-md-4">
 	            <center><h2>ITEMS</h2></center>
 	         		 <label>Flechas: <%= @numberOfArrows %></label>
+	         		 <label>Spray: <%= @numberOfSpray %></label>
 	        </div>
 	    
      </div>
