--- a/views/start.erb
+++ b/views/start.erb
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link rel="shortcut icon" href="/favicon.ico" />
+<link rel="stylesheets" type="text/css" href="estilos.css">
 <header>
 	<nav class="navbar navbar-inverse">
 	    <div class="container-fluid">
