--- a/views/console.erb
+++ b/views/console.erb
@@ -107,7 +107,9 @@
 								<button type="submit" name="Norte">Norte</button>
 							</form>
 						<% elsif @pressSp %>	
-
+							<form method="post" action="/sprayToTop">
+								<button type="submit" name="sprayTop">^</button>
+							</form>
 						<%end%>
 					<% end %>
 					<% if @south %>
@@ -119,7 +121,10 @@
 							<form method="post" action="/toSouth">
 								<button type="submit" name="Sur">Sur</button>
 							</form>
-						<% elsif @pressSp %>		
+						<% elsif @pressSp %>
+							<form method="post" action="/sprayToBottom">
+								<button type="submit" id="sprayBot">v</button>
+							</form>		
 						<% end %>
 					<% end %>
 					<% if @east %>
@@ -132,19 +137,24 @@
 								<button type="submit" name="Este">Este</button>
 							</form>
 						<% elsif @pressSp %>
+							<form method="post" action="/sprayToRight">
+								<button type="submit" name="sprayRight">></button>
+							</form>
 						<% end %>
-
 					<% end %>
 					<% if @west %>
 						<% if @numberOfArrows>=1 && @pressAr%>
 							<form method="post" action="/shootToLeft">
-								<button type="submit" name="shootLeft"><</button>
+								<button type="submit" name="shootLeft"></button>
 							</form>
 						<% elsif @pressMo %>
 							<form method="post" action="/toWest">
 								<button type="submit" name="Oeste">Oeste</button>
 							</form>
 						<% elsif @pressSp %>
+							<form method="post" action="/sprayToLeft">
+								<button type="submit" name="sprayLeft"></button>
+							</form>
 						<% end %>
 					<% end %>	
 				</div>
@@ -209,48 +219,6 @@
 					<button class="buttonUnPressed" type="submit" name="pressShootSpay">Usar Spray</button>
 				<% end %>
 			</form>
-		</div>
-				<div id="color-button-holder">
-					<div id="blue-btn">
-						<% if @north %>
-							<% if @numberOfSpray>=1 %>
-								<form method="post" action="/sprayToTop">
-									<button type="submit" name="sprayTop">^</button>
-								</form>
-							<%end%>
-						<% end %>
-					</div>
-				
-					<div id="green-btn">
-						<% if @west %>
-							<% if @numberOfSpray>=1 %>
-								<form method="post" action="/sprayToLeft">
-									<button type="submit" name="sprayLeft"><</button>
-								</form>
-							<% end %>
-						<% end %>
-					</div>
-				
-					<div id="red-btn">
-						<% if @south %>
-							<% if @numberOfSpray>=1 %>
-									<form method="post" action="/sprayToBottom">
-										<button type="submit" id="sprayBot">v</button>
-									</form>
-							<% end %>
-						<% end %>
-					</div>
-				
-					<div id="yellow-btn">
-						<% if @east %>
-							<% if @numberOfSpray>=1 %>
-								<form method="post" action="/sprayToRight">
-									<button type="submit" name="sprayRight">></button>
-								</form>
-							<% end %>
-						<% end %>
-					</div>
-				</div>
 	<% else %>	
 		<div id="container">
 			<div id="body">
