Agregado un mapa solo para realizar tests
	-corregidas pruebas
	-mejoradas pruebas
	-mejorados steps

--- a/views/console.erb
+++ b/views/console.erb
@@ -214,9 +214,9 @@
 			</form>
 			<form method="post" action="/pressUseSpray">
 				<% if @pressSp %>
-					<button class="buttonPressed" type="submit" name="pressShootSpray">Usar Spray</button>
+					<button class="buttonPressed" type="submit" id="pressShootSpray">Usar Spray</button>
 				<% else %>
-					<button class="buttonUnPressed" type="submit" name="pressShootSpay">Usar Spray</button>
+					<button class="buttonUnPressed" type="submit" id="pressShootSpray">Usar Spray</button>
 				<% end %>
 			</form>
 	<% else %>	
