--- a/views/start.erb
+++ b/views/start.erb
@@ -26,6 +26,8 @@
 		<form method="post" action="/start">
 	    	<button type="submit" class="btn btn-success" name="JUGAR MAPA POR DEFECTO">JUGAR MAPA POR DEFECTO</button>
 		</form>
-
+		<form method="post" action="/testStart">
+	    	<button type="submit" class="btn btn-success" name="testMap">testMap</button>
+		</form>
 	</center>
 </body>
