--- a/views/mapas.erb
+++ b/views/mapas.erb
@@ -20,17 +20,11 @@
 </header>
 <body>
 	<center>
-		<form method="get" action="/configureMap">
-	    	<button type="submit" class="btn btn-success" name="CONFIGURAR MAPA">CONFIGURAR MAPA</button>
+		<form method="get" action="/mapaT">
+	    	<button type="submit" class="btn btn-success" name="mapaT">Mapa T</button>
 		</form>
-		<form method="post" action="/start">
-	    	<button type="submit" class="btn btn-success" name="JUGAR MAPA POR DEFECTO">JUGAR MAPA POR DEFECTO</button>
-		</form>
-		<form method="get" action="/mostrarMapas">
-	    	<button type="submit" class="btn btn-success" name="Predefinidos">MAPAS PREDEFINIDOS</button>
-		</form>
-		<form method="post" action="/testStart">
-	    	<button type="submit" class="btn btn-success" name="testMap">testMap</button>
+		<form method="get" action="/mapaU">
+	    	<button type="submit" class="btn btn-success" name="mapaU">Mapa U</button>
 		</form>
 	</center>
 </body>
