--- a/public/estilo.css
+++ b/public/estilo.css
@@ -12,7 +12,7 @@ yellow btn: d4b95e
 */
 
 #container{
-	margin: 10% auto;
+	margin: 0% auto;
 	width: 600px;
 	height: 700px;
 }
@@ -79,13 +79,13 @@ yellow btn: d4b95e
 	width: 100px;
 	height: 100px;
 	position: relative;
-	top: -500px;
-	left: 515px;
+	top: -50px;
+	left: 51px;
 }
 
 #blue-btn{
-	width: 25px;
-	height: 25px;
+	min-width: 25px;
+	min-height: 25px;
 	position: relative;
 	background-color: #6fa8eb;
 	-moz-border-radius: 50px; 
@@ -96,12 +96,13 @@ yellow btn: d4b95e
 	box-shadow: 0px 0px 2px 2px rgba(219,222,222,1);
 }
 
-#green-btn{
-	width: 25px;
-	height: 25px;
-	position: relative;
+.green-btn{
+	min-width: 25px;
+	min-height: 25px;
+	position: absolute;
+	
 	left: -30px;
-	top: 5px;
+	top: -3px;
 	background-color: #43be85;
 	-moz-border-radius: 50px; 
 	-webkit-border-radius: 50px; 
@@ -111,11 +112,11 @@ yellow btn: d4b95e
 	box-shadow: 0px 0px 2px 2px rgba(219,222,222,1);
 }
 
-#red-btn{
-	width: 25px;
-	height: 25px;
-	position: relative;
-	top: 10px;
+.red-btn{
+	min-width: 25px;
+	min-height: 25px;
+	position: absolute;
+	top: 30px;
 	background-color: #ea6e4a;
 	-moz-border-radius: 50px; 
 	-webkit-border-radius: 50px; 
@@ -125,12 +126,12 @@ yellow btn: d4b95e
 	box-shadow: 0px 0px 2px 2px rgba(219,222,222,1);
 }
 
-#yellow-btn{
-	width: 25px;
-	height: 25px;
-	position: relative;
+.yellow-btn{
+	min-width: 25px;
+	min-height: 25px;
+	position: absolute;
 	left: 30px;
-	top: -45px;
+	top: -3px;
 	background-color: #d4b95e;
 	-moz-border-radius: 50px; 
 	-webkit-border-radius: 50px; 
@@ -148,5 +149,19 @@ yellow btn: d4b95e
 .h4{
 	text-align: right;
 	color: white;
+	
+}
+.button2{
+	min-width: 25px;
+	min-height: 25px;
+	top:-40px;
+	position: absolute;
+	background-color: #6fa8eb;
+	-moz-border-radius: 50px; 
+	-webkit-border-radius: 50px; 
+	border-radius: 50px;
+	-webkit-box-shadow: 0px 0px 2px 2px rgba(219,222,222,1);
+	-moz-box-shadow: 0px 0px 2px 2px rgba(219,222,222,1);
+	box-shadow: 0px 0px 2px 2px rgba(219,222,222,1);
 	
 }
